UseCaseManagement/force-app/main/default/objects/Campaign/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Client__r.Account_Manager__r.FirstName  &amp; &#39; &#39; &amp; Client__r.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>