UseCaseManagement/force-app/main/default/objects/Campaign/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <label>Actual Cost</label>
    <summarizedField>Campaign_Element__c.Cost_of_Publication_Clone__c</summarizedField>
    <summaryForeignKey>Campaign_Element__c.Campaign_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>