UseCaseManagement/force-app/main/default/objects/Campaign/fields/Actual_Number_of_Publications__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Publications__c</fullName>
    <label>Actual Number of Publications</label>
    <summaryFilterItems>
        <field>Campaign_Element__c.Status__c</field>
        <operation>equals</operation>
        <value>Published</value>
    </summaryFilterItems>
    <summaryForeignKey>Campaign_Element__c.Campaign_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>