UseCaseManagement/force-app/main/default/objects/Campaign/fields/Cost_of_the_Product__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_the_Product__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost of the Product</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>