UseCaseManagement/force-app/main/default/objects/Campaign/fields/Current_Popularity__c.field-meta.xml
<CustomField>
    <fullName>Current_Popularity__c</fullName>
    <label>Current Popularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>