UseCaseManagement/force-app/main/default/objects/Campaign/fields/Current_Region__c.field-meta.xml
<CustomField>
    <fullName>Current_Region__c</fullName>
    <label>Current Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>Central and Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Mediterranean &amp; Middle East</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>