UseCaseManagement/force-app/main/default/objects/Campaign/fields/Current_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue__c</fullName>
    <label>Current Revenue</label>
    <summarizedField>Campaign_Element__c.Revenue__c</summarizedField>
    <summaryForeignKey>Campaign_Element__c.Campaign_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>