UseCaseManagement/force-app/main/default/objects/Campaign/fields/Interview_Name__c.field-meta.xml
<CustomField>
    <fullName>Interview_Name__c</fullName>
    <label>Interview Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>