UseCaseManagement/force-app/main/default/objects/Campaign/fields/Publication_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Publication_Cycle__c</fullName>
    <label>Publication Cycle</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>