UseCaseManagement/force-app/main/default/objects/Campaign/fields/Targeted_Number_of_Publications__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Number_of_Publications__c</fullName>
    <label>Targeted Number of Publications</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>