UseCaseManagement/force-app/main/default/objects/Campaign/fields/Targeted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Targeted Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>