UseCaseManagement/force-app/main/default/objects/Campaign/validationRules/Status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Status ),  OR(ISPICKVAL( PRIORVALUE ( Status), &quot;Completed&quot;), ISPICKVAL( PRIORVALUE ( Status), &quot;Aborted&quot;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status is completed</errorMessage>
</ValidationRule>