UseCaseManagement/force-app/main/default/objects/Campaign/listViews/Campaigns.listView-meta.xml
<ListView>
    <fullName>Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Cost_of_the_Product__c</columns>
    <columns>Current_Revenue__c</columns>
    <columns>Actual_Cost__c</columns>
    <columns>Targeted_Number_of_Publications__c</columns>
    <filterScope>Mine</filterScope>
    <label>Campaigns</label>
</ListView>